Can fight back against new AI.
Instantiated montage for later

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -324,7 +324,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
 BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
-SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
+SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 CapsuleComponent=
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
@@ -382,7 +382,7 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.Show
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 CharacterMovementComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 EdGraphNode=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
-K2Node_VariableSet=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+K2Node_VariableSet=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 StaticMeshActor=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 BP_Enemy_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 BP_Enemy_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_Enemy_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
@@ -391,9 +391,10 @@ BP_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsG
 NavMeshBoundsVolume=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 BrushComponent=
 AB_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+BP_ThirdPersonCharacter_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/AI/Tasks
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/AI/v2
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -468,7 +469,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Parent.ParentKeys.ParentKeys[1]\" \"Object.Blackboard\" "
+Object="\"Object\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -647,11 +648,11 @@ MediaSource="\"Object\" "
 MediaPlayer="\"Object\" "
 SoundWave="\"Object\" "
 SoundBase="\"Object\" "
-BP_ThirdPersonCharacter_C="\"Object\" \"Object.Actor.Tags\" "
+BP_ThirdPersonCharacter_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 Character="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 Pawn="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 BP_ThirdPersonCharacter_Enemy_C="\"Object\" \"Object.Actor.Tags\" "
-BP_EnemyAI_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.Tags\" "
+BP_EnemyAI_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 PawnSensingComponent="\"Object\" "
 NavMeshBoundsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -749,9 +750,13 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/AI/Tasks/BTTask_Roam.BTTask_Roam
 OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2.BlendSpace_AI_v2
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI
+OpenAssetsAtExit=/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer.BTTask_ChasePlayer
 OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/AI_Controller_v2.AI_Controller_v2
+OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/AB_AI_v2.AB_AI_v2
 OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/BP_AI_v2.BP_AI_v2
 OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/BT_AI_v2.BT_AI_v2
+OpenAssetsAtExit=/Game/ThirdPerson/AI/BBD_Enemy_AI.BBD_Enemy_AI
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2216,6 +2221,7 @@ BTTask_ChasePlayer_C.Description=True
 BTDecorator_Blackboard.FlowControl=True
 BTDecorator_Blackboard.Blackboard=True
 BTDecorator_Blackboard.Description=True
+AB_AI_v2_C.Default=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2366,26 +2372,26 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin8.DrSFinalJoin
 RecentlyPlaced=/Game/Blender_Collections/DrSPartsParsed/DrSFinal_Blade.DrSFinal_Blade;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/AI/v2/BBD_AI_v2
-MRUItem1=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
-MRUItem2=/Game/ThirdPerson/AI/v2/AB_AI_v2
-MRUItem3=/Game/ThirdPerson/AI/v2/NewBlendSpace
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem5=/Game/ThirdPerson/AI/v2/AI_Controller_v2
-MRUItem6=/Game/ThirdPerson/AI/v2/BP_AI_v2
-MRUItem7=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
-MRUItem8=/Game/ThirdPerson/AI/v2/BT_AI
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
-MRUItem11=/Game/ThirdPerson/AI/AP_Enemy_AI
-MRUItem12=/Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2
-MRUItem13=/Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2
-MRUItem14=/Game/ThirdPerson/AI/Enemy_AI_Controller
-MRUItem15=/Game/ThirdPerson/AI/BT_Enemy_AI
-MRUItem16=/Game/Resources/BP_FootstepAnimNotify
-MRUItem17=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
-MRUItem18=/Game/ThirdPerson/AI/v2/BP_Enemy_AI_v2
-MRUItem19=/Game/ThirdPerson/AI/NewBlendSpace
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/AI/v2/BT_AI_v2
+MRUItem2=/Game/ThirdPerson/AI/v2/BP_AI_v2
+MRUItem3=/Game/ThirdPerson/AI/v2/AB_AI_v2
+MRUItem4=/Game/ThirdPerson/AI/v2/AI_Controller_v2
+MRUItem5=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem7=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
+MRUItem8=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
+MRUItem9=/Game/ThirdPerson/AI/v2/BBD_AI_v2
+MRUItem10=/Game/ThirdPerson/AI/v2/NewBlendSpace
+MRUItem11=/Game/ThirdPerson/AI/v2/BT_AI
+MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem13=/Game/ThirdPerson/AI/AP_Enemy_AI
+MRUItem14=/Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2
+MRUItem15=/Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2
+MRUItem16=/Game/ThirdPerson/AI/Enemy_AI_Controller
+MRUItem17=/Game/ThirdPerson/AI/BT_Enemy_AI
+MRUItem18=/Game/Resources/BP_FootstepAnimNotify
+MRUItem19=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -2426,6 +2432,12 @@ MRUItem19=/Game/ThirdPerson/AI/NewBlendSpace
 /Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2.Enemy_AI_Controller_v2=0
 /Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2.BT_Enemy_AI_v2=0
 /Game/ThirdPerson/AI/v2/BBD_AI_v2.BBD_AI_v2=0
+/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2.BlendSpace_AI_v2=0
+/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer.BTTask_ChasePlayer=0
+/Game/ThirdPerson/AI/v2/AI_Controller_v2.AI_Controller_v2=0
+/Game/ThirdPerson/AI/v2/AB_AI_v2.AB_AI_v2=0
+/Game/ThirdPerson/AI/v2/BP_AI_v2.BP_AI_v2=0
+/Game/ThirdPerson/AI/v2/BT_AI_v2.BT_AI_v2=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2561,7 +2573,7 @@ WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/
+UNR=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/ThirdPerson/Maps
 BRUSH=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/
 FBX=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/
 FBXAnim=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/
