Edits from previous session

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -319,12 +319,12 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
 BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
-SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
+SkeletalMeshComponent=
 CapsuleComponent=
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
@@ -394,7 +394,7 @@ AB_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.C
 BP_ThirdPersonCharacter_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/AI/v2
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -587,7 +587,7 @@ TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
-EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
 ABP_Manny_C="\"Object\" "
@@ -746,7 +746,7 @@ BTDecorator="\"Object\" "
 BTAuxiliaryNode="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/ThirdPerson/AI/Tasks/BTTask_Roam.BTTask_Roam
 OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2.BlendSpace_AI_v2
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI
@@ -2438,6 +2438,7 @@ MRUItem19=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
 /Game/ThirdPerson/AI/v2/AB_AI_v2.AB_AI_v2=0
 /Game/ThirdPerson/AI/v2/BP_AI_v2.BP_AI_v2=0
 /Game/ThirdPerson/AI/v2/BT_AI_v2.BT_AI_v2=0
+/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer.BTTask_ChasePlayer=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
