--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -319,12 +319,12 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
 BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
-SkeletalMeshComponent=
+SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 CapsuleComponent=
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
@@ -392,6 +392,7 @@ NavMeshBoundsVolume=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Con
 BrushComponent=
 AB_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 BP_ThirdPersonCharacter_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
+K2Node_VariableGet=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
@@ -473,7 +474,7 @@ Object="\"Object\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.Parent.ParentKeys.ParentKeys[1]\" \"Object.Blackboard\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 AssetViewerSettings="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
@@ -587,7 +588,7 @@ TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
-EdGraphNode="\"Object\" "
+EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
 ABP_Manny_C="\"Object\" "
@@ -648,9 +649,9 @@ MediaSource="\"Object\" "
 MediaPlayer="\"Object\" "
 SoundWave="\"Object\" "
 SoundBase="\"Object\" "
-BP_ThirdPersonCharacter_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
-Character="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
-Pawn="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+BP_ThirdPersonCharacter_C="\"Object\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 BP_ThirdPersonCharacter_Enemy_C="\"Object\" \"Object.Actor.Tags\" "
 BP_EnemyAI_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 PawnSensingComponent="\"Object\" "
@@ -746,7 +747,7 @@ BTDecorator="\"Object\" "
 BTAuxiliaryNode="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/AI/Tasks/BTTask_Roam.BTTask_Roam
 OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2.BlendSpace_AI_v2
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI
@@ -2377,21 +2378,21 @@ MRUItem1=/Game/ThirdPerson/AI/v2/BT_AI_v2
 MRUItem2=/Game/ThirdPerson/AI/v2/BP_AI_v2
 MRUItem3=/Game/ThirdPerson/AI/v2/AB_AI_v2
 MRUItem4=/Game/ThirdPerson/AI/v2/AI_Controller_v2
-MRUItem5=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
+MRUItem5=/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer
 MRUItem6=/Game/ThirdPerson/Blueprints/BP_EnemyAI
 MRUItem7=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
 MRUItem8=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
-MRUItem9=/Game/ThirdPerson/AI/v2/BBD_AI_v2
-MRUItem10=/Game/ThirdPerson/AI/v2/NewBlendSpace
-MRUItem11=/Game/ThirdPerson/AI/v2/BT_AI
-MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
-MRUItem13=/Game/ThirdPerson/AI/AP_Enemy_AI
-MRUItem14=/Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2
-MRUItem15=/Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2
-MRUItem16=/Game/ThirdPerson/AI/Enemy_AI_Controller
-MRUItem17=/Game/ThirdPerson/AI/BT_Enemy_AI
-MRUItem18=/Game/Resources/BP_FootstepAnimNotify
-MRUItem19=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
+MRUItem9=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
+MRUItem10=/Game/ThirdPerson/AI/v2/BBD_AI_v2
+MRUItem11=/Game/ThirdPerson/AI/v2/NewBlendSpace
+MRUItem12=/Game/ThirdPerson/AI/v2/BT_AI
+MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem14=/Game/ThirdPerson/AI/AP_Enemy_AI
+MRUItem15=/Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2
+MRUItem16=/Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2
+MRUItem17=/Game/ThirdPerson/AI/Enemy_AI_Controller
+MRUItem18=/Game/ThirdPerson/AI/BT_Enemy_AI
+MRUItem19=/Game/Resources/BP_FootstepAnimNotify
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
